--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Topic4</string>
+    <string-array name="countries">
+        <item>Nepal</item>
+        <item>USA</item>
+        <item>China</item>
+        <item>London</item>
+        <item>Canada</item>
+        <item>Nepal</item>
+    </string-array>
 </resources>
